# MadLinSolv

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
data/: dictionary.xml  template.xml
doc/: CMakeLists.txt  Doxyfile.in
doc/extra/: MadLinSolv.hpp
src/: CMakeLists.txt  MadLinSolv_version.hpp  dictionary.cpp  dictionary.hpp  dictionary.tpp  initialSolutionReader.cpp  initialSolutionReader.hpp  main.cpp  matrixReader.cpp  matrixReader.hpp  rhsReader.cpp  rhsReader.hpp  run_manager.cpp  run_manager.hpp  solver.cpp  solver.hpp
test/: CMakeLists.txt  test_driver.py
